# inbox-exodus

./: .replit  README.md  app.py  config.py  google_auth.py  main.py  microsoft_auth.py  models.py  pyproject.toml
attached_assets/: Pasted--What-Is-Inbox-Exodus-Inbox-Exodus-is-a-litigation-aware-AI-driven-file-migration-tool-designe-1744996951397.txt  Pasted-Hi-Daddy-Your-detailed-plan-is-spot-on-Here-s-a-clean-and-concise-approval-breakdown-you-ca-1744997548725.txt
cli/: __init__.py  interface.py
extractors/: __init__.py  file_extractor.py  microsoft_extractor.py
migrators/: __init__.py  google_migrator.py
processors/: __init__.py  gpt_classifier.py  litigation_detector.py  litigation_scanner.py
static/css/: style.css
static/js/: main.js
templates/: dashboard.html  index.html  litigation_analyzer.html  login.html  register.html
utils/: __init__.py  file_hasher.py  logger.py
